--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>一週間のファッション</title>
 </head>
 <body>
-    hello
+    <h1>私の夏休み</h1>
+    <p>夏休みの一週間の過ごし方を、その日のコーデとともに紹介します。</p>
 </body>
 </html>
