--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>私の夏休み</h1>
     <p>夏休みの一週間の過ごし方を、その日のコーデとともに紹介します。</p>
-    <img src="c:\Users\24n3068\Downloads\IMG_20250919_183247 (1).jpg">
+    <img src="IMG_20250919_183247 (1).jpg" alt="かき氷食べに行ったときのコーデ">
 </body>
 </html>
