--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
     <h1>私の夏休み</h1>
     <p>夏休みの一週間の過ごし方を、その日のコーデとともに紹介します。</p>
     <img src="ice.jpg" alt="かき氷食べに行ったときのコーデ">
+    <img src="fish.jpg" alt="水族館に行ったときのコーデ">
+    <img src="disney.jpg" alt="ディズニーに行ったときのコーデ">
+    <img src="flower.jpg" alt="ひまわり畑に行ったときのコーデ">
+    <img src="yosakoi.jpg" alt="よさこい祭りで踊ったときのコーデ">
+    <img src="live.jpg" alt="バンドのライブに行ったときのコーデ">
+    <img src="bbq.jpg" alt="バーベキューに行ったときのコーデ">
 </body>
 </html>
