--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex" />
     <title>一週間のファッション</title>
 </head>
 <body>
     <h1>My Summer Week</h1>
     <p>夏休みの一週間の過ごし方を、その日のコーデとともに紹介します。</p>
     <p>Day　よさこい祭りで踊ったときのコーデ</p>
-    <img src="yosakoi.jpg" alt="よさこい祭りで踊ったときのコーデ">
+    <img src="yosakoi.jpg" alt="よさこい祭りで踊ったときのコーデ" sizes="600px">
     <img src="yosakoisolo.jpg" alt="よさこい演舞中の私">
     <img src="yosakoiall.jpg" alt="よさこい演舞">
     <img src="fireworks.jpg" alt="花火">
