--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex" />
     <title>一週間のファッション</title>
+    img{
+        max-width: 100%;
+    }
+    @media (min-width: 600px) {
+        h1{
+            fontsize: 4rem;
+        }
+        main{
+            display: flex;
+        }
+    }
 </head>
 <body>
     <h1>My Summer Week</h1>
