--- a/index.html
+++ b/index.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex" />
     <title>一週間のファッション</title>
-    img{
-        max-width: 100%;
-    }
-    @media (min-width: 600px) {
-        h1{
-            fontsize: 4rem;
-        }
-        main{
-            display: flex;
-        }
-    }
+    <link rel="stylesheet" href="css/style.css"
 </head>
 <body>
     <h1>My Summer Week</h1>
