--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>夏休みの一週間の過ごし方を、その日のコーデとともに紹介します。</p>
     <p>Day　よさこい祭りで踊ったときのコーデ</p>
     <img src="yosakoi.jpg" alt="よさこい祭りで踊ったときのコーデ" width="300px">
-    <img src="yosakoisolo.jpg" alt="よさこい演舞中の私"><img src="yosakoiall.jpg" alt="よさこい演舞"><img src="fireworks.jpg" alt="花火">
+    <img src="yosakoisolo.jpg" width="30%" alt="よさこい演舞中の私"><img src="yosakoiall.jpg" width="30%" alt="よさこい演舞"><img src="fireworks.jpg" width="30%" alt="花火">
     <p>私の夏休みのスタートは、よさこい祭り。お披露目の舞台は気温も心もアツかったです。夜には花火も上がって最高のスタートを切りました。</p>
     <p>Day　川下り</p>
     <img src="ice.jpg" alt="川下りに行ったときのコーデ">
