--- a/index.html
+++ b/index.html
@@ -8,42 +8,44 @@
     <link rel="stylesheet" href="css/style.css"
 </head>
 <body>
-    <h1>My Summer Week</h1>
-    <p>夏休みの一週間の過ごし方を、その日のコーデとともに紹介します。</p>
-    <p>Day　よさこい祭りで踊ったときのコーデ</p>
-    <img src="yosakoi.jpg" alt="よさこい祭りで踊ったときのコーデ" width="300px">
-    <br/>
-    <img src="yosakoisolo.jpg" width="30%" alt="よさこい演舞中の私"><img src="yosakoiall.jpg" width="30%" alt="よさこい演舞"><img src="fireworks.jpg" width="30%" alt="花火">
-    <p>私の夏休みのスタートは、よさこい祭り。お披露目の舞台は気温も心もアツかったです。夜には花火も上がって最高のスタートを切りました。</p>
-    <p>Day　川下り</p>
-    <img src="ice.jpg" alt="川下りに行ったときのコーデ">
-    <br/>
-    <img src="linedown.JPG" width="30%" alt="川下り中"><img src="iceup.JPG" width="30%" alt="かき氷">
-    <p>川下りに行きました。晴れていて空も川も綺麗な自然に囲まれた一日。かき氷も食べて夏を味わいました。</p>
-    <p>Day　水族館</p>
-    <img src="fish.jpg" alt="水族館に行ったときのコーデ">
-    <br/>
-    <img src="fishup.jpg" width="30%" alt="頭上を通る魚">
-    <p>久しぶりの水族館。頭上を通る魚たちを見て涼しげな気分になりました。</p>
-    <p>Day　Disney Sea</p>
-    <img src="disney.jpg" alt="ディズニーに行ったときのコーデ">
-    <br/>
-    <img src="catsle.JPG" width="30%" alt="アレンデールのお城"><img src="catstle2.JPG" width="30%" alt="ラプンツェルの塔">
-    <p>初めての新エリアで大興奮。つい感動の涙が出てしまいました。</p>
-    <p>Day　ひまわり畑</p>
-    <img src="flower.jpg" alt="ひまわり畑に行ったときのコーデ">
-    <br/>
-    <img src="himawariall.JPG" width="30%" alt="ひまわり畑"><img src="himawariup.jpg" width="30%" alt="ひまわり">
-    <p>満開のひまわりを見に行きました。全体的に見ても綺麗でしたが、色や形、大きさ様々で近くで見ても面白かったです。</p>
-    <p>Day　ライブ</p>
-    <img src="live.jpg" alt="バンドのライブに行ったときのコーデ">
-    <br/>
-    <img src="inlive.jpg" width="30%" alt="ライブハウス">
-    <p>好きなバンドのライブに行きました。初めてのライブハウスで、アーティストとの近さに驚き。</p>
-    <p>Day　BBQ</p>
-    <img src="bbq.jpg" alt="バーベキューに行ったときのコーデ">
-    <br/>
-    <img src="bbqfood.JPG" width="30%" alt="BBQ">
-    <p>BBQをしました。お肉に野菜に焼きそばや、マシュマロ、ポップコーンなど、、、おなかいっぱい！</p>
+    <div class="img">
+     <h1>My Summer Week</h1>
+     <p>夏休みの一週間の過ごし方を、その日のコーデとともに紹介します。</p>
+     <p>Day　よさこい祭りで踊ったときのコーデ</p>
+     <img src="yosakoi.jpg" alt="よさこい祭りで踊ったときのコーデ" width="300px">
+     <br/>
+     <img src="yosakoisolo.jpg" width="30%" alt="よさこい演舞中の私"><img src="yosakoiall.jpg" width="30%" alt="よさこい演舞"><img src="fireworks.jpg" width="30%" alt="花火">
+     <p>私の夏休みのスタートは、よさこい祭り。お披露目の舞台は気温も心もアツかったです。夜には花火も上がって最高のスタートを切りました。</p>
+     <p>Day　川下り</p>
+     <img src="ice.jpg" alt="川下りに行ったときのコーデ">
+     <br/>
+     <img src="linedown.JPG" width="30%" alt="川下り中"><img src="iceup.JPG" width="30%" alt="かき氷">
+     <p>川下りに行きました。晴れていて空も川も綺麗な自然に囲まれた一日。かき氷も食べて夏を味わいました。</p>
+     <p>Day　水族館</p>
+     <img src="fish.jpg" alt="水族館に行ったときのコーデ">
+     <br/>
+     <img src="fishup.jpg" width="30%" alt="頭上を通る魚">
+     <p>久しぶりの水族館。頭上を通る魚たちを見て涼しげな気分になりました。</p>
+     <p>Day　Disney Sea</p>
+     <img src="disney.jpg" alt="ディズニーに行ったときのコーデ">
+     <br/>
+     <img src="catsle.JPG" width="30%" alt="アレンデールのお城"><img src="catstle2.JPG" width="30%" alt="ラプンツェルの塔">
+     <p>初めての新エリアで大興奮。つい感動の涙が出てしまいました。</p>
+     <p>Day　ひまわり畑</p>
+     <img src="flower.jpg" alt="ひまわり畑に行ったときのコーデ">
+     <br/>
+     <img src="himawariall.JPG" width="30%" alt="ひまわり畑"><img src="himawariup.jpg" width="30%" alt="ひまわり">
+     <p>満開のひまわりを見に行きました。全体的に見ても綺麗でしたが、色や形、大きさ様々で近くで見ても面白かったです。</p>
+     <p>Day　ライブ</p>
+     <img src="live.jpg" alt="バンドのライブに行ったときのコーデ">
+     <br/>
+     <img src="inlive.jpg" width="30%" alt="ライブハウス">
+     <p>好きなバンドのライブに行きました。初めてのライブハウスで、アーティストとの近さに驚き。</p>
+     <p>Day　BBQ</p>
+     <img src="bbq.jpg" alt="バーベキューに行ったときのコーデ">
+     <br/>
+     <img src="bbqfood.JPG" width="30%" alt="BBQ">
+     <p>BBQをしました。お肉に野菜に焼きそばや、マシュマロ、ポップコーンなど、、、おなかいっぱい！</p>
+    </div>
 </body>
 </html>
