--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css"
 </head>
 <body>
-    <div class="img">
+    <div class="photo-row">
      <h1>My Summer Week</h1>
      <p>夏休みの一週間の過ごし方を、その日のコーデとともに紹介します。</p>
      <p>Day　よさこい祭りで踊ったときのコーデ</p>
