--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <p>夏休みの一週間の過ごし方を、その日のコーデとともに紹介します。</p>
      <p>Day　よさこい祭りで踊ったときのコーデ</p>
      <div class="img">
-        <img src="yosakoi.jpg" alt="よさこい祭りで踊ったときのコーデ" width="300px">
+        <img src="yosakoi.jpg" alt="よさこい祭りで踊ったときのコーデ">
      <br/>
      </div>
      <div class="img-sub">
@@ -44,7 +44,7 @@
      <br/>
     </div>
     <div class="img-sub">
-     <img src="fishup.jpg" width="30%" alt="頭上を通る魚">
+        <ul><il><img src="fishup.jpg" width="30%" alt="頭上を通る魚"></il></ul>
     </div>
      <p>久しぶりの水族館。頭上を通る魚たちを見て涼しげな気分になりました。</p>
      
@@ -80,7 +80,7 @@
      <br/>
     </div>
     <div class="img-sub">
-     <img src="inlive.jpg" width="30%" alt="ライブハウス">
+      <ul><il><img src="inlive.jpg" width="30%" alt="ライブハウス"></il></ul>
     </div>
      <p>好きなバンドのライブに行きました。初めてのライブハウスで、アーティストとの近さに驚き。</p>
      
@@ -90,7 +90,7 @@
      <br/>
     </div>
     <div class="img-sub">
-     <img src="bbqfood.JPG" width="30%" alt="BBQ">
+      <ul><il><img src="bbqfood.JPG" width="30%" alt="BBQ"></il></ul>
     </div>
      <p>BBQをしました。お肉に野菜に焼きそばや、マシュマロ、ポップコーンなど、、、おなかいっぱい！</p>
 </body>
