--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
      <img src="fish.jpg" alt="水族館に行ったときのコーデ">
      <br/>
     </div>
-    <div class="img-sub">
+    <div class="img-sub2">
         <ul><il><img src="fishup.jpg" width="30%" alt="頭上を通る魚"></il></ul>
     </div>
      <p>久しぶりの水族館。頭上を通る魚たちを見て涼しげな気分になりました。</p>
@@ -79,7 +79,7 @@
      <img src="live.jpg" alt="バンドのライブに行ったときのコーデ">
      <br/>
     </div>
-    <div class="img-sub">
+    <div class="img-sub2">
       <ul><il><img src="inlive.jpg" width="30%" alt="ライブハウス"></il></ul>
     </div>
      <p>好きなバンドのライブに行きました。初めてのライブハウスで、アーティストとの近さに驚き。</p>
@@ -89,7 +89,7 @@
      <img src="bbq.jpg" alt="バーベキューに行ったときのコーデ">
      <br/>
     </div>
-    <div class="img-sub">
+    <div class="img-sub2">
       <ul><il><img src="bbqfood.JPG" width="30%" alt="BBQ"></il></ul>
     </div>
      <p>BBQをしました。お肉に野菜に焼きそばや、マシュマロ、ポップコーンなど、、、おなかいっぱい！</p>
