--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
      <br/>
     </div>
     <div class="img-sub2">
-        <ul><il><img src="fishup.jpg" alt="頭上を通る魚"></il></ul>
+        <img src="fishup.jpg" alt="頭上を通る魚">
     </div>
      <p>久しぶりの水族館。頭上を通る魚たちを見て涼しげな気分になりました。</p>
      
@@ -80,7 +80,7 @@
      <br/>
     </div>
     <div class="img-sub2">
-      <ul><il><img src="inlive.jpg" alt="ライブハウス"></il></ul>
+      <img src="inlive.jpg" alt="ライブハウス">
     </div>
      <p>好きなバンドのライブに行きました。初めてのライブハウスで、アーティストとの近さに驚き。</p>
      
@@ -90,7 +90,7 @@
      <br/>
     </div>
     <div class="img-sub2">
-      <ul><il><img src="bbqfood.JPG" alt="BBQ"></il></ul>
+      <img src="bbqfood.JPG" alt="BBQ">
     </div>
      <p>BBQをしました。お肉に野菜に焼きそばや、マシュマロ、ポップコーンなど、、、おなかいっぱい！</p>
 </body>
